[ADD] Base package

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         {
             "name": "Alejandro Isla",
             "email": "aisla@innovaweb.cl",
-            "homepage": "www.innovaweb.cl"
+            "homepage": "https://www.innovaweb.cl"
         }
     ],
     "homepage": "https://github.com/innovawebcl/transbank",
