--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "homepage": "https://github.com/innovawebcl/transbank",
     "keywords": ["Laravel", "Transbank"],
     "require": {
-        "illuminate/support": "~5|~6|~7|~8"
+        "illuminate/support": "~5|~6|~7|~8",
+        "transbank/transbank-sdk": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
