--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "keywords": ["Laravel", "Transbank"],
     "require": {
         "illuminate/support": "~5|~6|~7|~8",
-        "transbank/transbank-sdk": "~2.0"
+        "transbank/transbank-sdk": "1.10.1"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
