[FIXED] Version 1.1.1 - Se cambia a "transbank/transbank-sdk": "~1.0" - changelog.md

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "keywords": ["Laravel", "Transbank"],
     "require": {
         "illuminate/support": "~5|~6|~7|~8",
-        "transbank/transbank-sdk": "1.10.1"
+        "transbank/transbank-sdk": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
