--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,21 @@
         {
             "name": "Alejandro Isla",
             "email": "aisla@innovaweb.cl",
-            "homepage": "https://www.innovaweb.cl"
+            "homepage": "https://github.com/willywes",
+            "role": "Developer"
+        },
+        {
+            "name": "Victor Araya",
+            "email": "varaya@innovaweb.cl",
+            "homepage": "https://github.com/xvad",
+            "role": "Developer"
         }
     ],
     "homepage": "https://github.com/innovawebcl/transbank",
     "keywords": ["Laravel", "Transbank"],
     "require": {
         "illuminate/support": "~5|~6|~7|~8",
-        "transbank/transbank-sdk": "~1.0"
+        "transbank/transbank-sdk": "2.0.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
