--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "homepage": "https://github.com/innovawebcl/transbank",
     "keywords": ["Laravel", "Transbank"],
     "require": {
-        "illuminate/support": "~5|~6|~7|~8",
+        "illuminate/support": "~5|~6|~7|~8|~9",
         "transbank/transbank-sdk": "2.0.6"
     },
     "require-dev": {
