--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "keywords": ["Laravel", "Transbank"],
     "require": {
         "illuminate/support": "~5|~6|~7|~8|~9",
-        "transbank/transbank-sdk": "2.0.6"
+        "transbank/transbank-sdk": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~9.0",
