--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
         }
     ],
     "homepage": "https://github.com/innovawebcl/transbank",
-    "keywords": ["Laravel", "Transbank"],
+    "keywords": [
+        "Laravel",
+        "Transbank"
+    ],
     "require": {
         "illuminate/support": "~5|~6|~7|~8|~9",
         "transbank/transbank-sdk": "^2.0"
